--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@codemirror/lang-javascript": "^6.2.1",
     "@uiw/codemirror-themes-all": "^4.21.20",
     "@uiw/react-codemirror": "^4.21.20",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
