--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dom-to-image": "^2.6.0",
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/dom-to-image": "^2.6.7",
