--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@codemirror/lang-javascript": "^6.2.1",
     "@uiw/codemirror-themes-all": "^4.21.20",
     "@uiw/react-codemirror": "^4.21.20",
+    "@uiw/react-color": "^2.0.2",
     "dom-to-image": "^2.6.0",
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
